--- a/3.Aspectos_ASG_materiales.md
+++ b/3.Aspectos_ASG_materiales.md
@@ -52,7 +52,7 @@ Medir la efectividad de las acciones sostenibles es crucial para saber si realme
 Además, es esencial usar herramientas de auditoría ambiental 📋 y seguimiento regular 📅 de estos indicadores para poder ajustar las estrategias y lograr mejoras continuas.
 
 <p align="center">
-  <img src="/img/medir-jpeg" alt="![medir](/img/medir.jpeg)" />
+  <img src="/img/medir.jpeg" alt="![medir](/img/medir.jpeg)" />
 </p>
 
 Este enfoque asegura que las acciones sostenibles no solo sean bien pensadas, sino también medibles y ajustables según los resultados, garantizando una evolución constante hacia la sostenibilidad empresarial. 🌱💪
