--- a/1.Introduccion_al_análisis_de_sostenibilidad.md
+++ b/1.Introduccion_al_análisis_de_sostenibilidad.md
@@ -1,1 +1,10 @@
+# 1. Introducción al análisis de sostenibilidad
+
+## ¿Qué es un plan de sostenibilidad y por qué es importante para una empresa?
+
+Un **plan de sostenibilidad** es un conjunto de acciones que toma una empresa para ser más responsable con el medio ambiente, la sociedad y la economía. Es importante porque ayuda a reducir costos, atraer clientes conscientes, mejorar la reputación y asegurar la viabilidad a largo plazo. Las empresas que implementan estas estrategias no solo cumplen con normativas, sino que también pueden ser más rentables, ya que aprovechan nuevas oportunidades de mercado y atraen a inversores que prefieren negocios responsables.
+
+## Relación entre sostenibilidad, rentabilidad y reputación empresarial
+
+La **sostenibilidad** está muy conectada con la **rentabilidad** y la **reputación** de la empresa. Adoptar prácticas sostenibles puede reducir costos (por ejemplo, en energía o residuos), abrir nuevas oportunidades de mercado, y atraer a más clientes que buscan marcas responsables. Además, las empresas con buenas prácticas sostenibles tienen mejor **imagen pública**, lo que aumenta su lealtad y facilita el acceso a financiación.
 
