--- a/2.Grupos_de_interes.md
+++ b/2.Grupos_de_interes.md
@@ -1,1 +1,21 @@
+# 2. Grupos de interés (stakeholders)
 
+## ¿Cuáles son los principales grupos de interés de una empresa?
+
+Los principales grupos de interés de una empresa son:
+
+1. **Empleados**: Su bienestar es clave para la productividad y para la implementación de políticas sostenibles.
+2. **Clientes**: Exigen productos responsables y pueden boicotear marcas que no lo sean.
+3. **Accionistas/inversores**: Prefieren empresas con prácticas sostenibles porque esto puede mejorar los rendimientos a largo plazo.
+4. **Reguladores**: Las leyes y normativas son claves para asegurar que las empresas actúen de manera responsable.
+5. **Sociedad y comunidades**: La comunidad influye en la percepción pública de la empresa y puede generar presión para adoptar prácticas más responsables.
+
+## ¿Cómo influyen estos grupos en las decisiones de sostenibilidad de la empresa?
+
+Cada grupo tiene un impacto directo en las decisiones sostenibles de la empresa:
+
+- **Empleados**: Si exigen condiciones más responsables, la empresa puede cambiar para mantenerlos motivados.
+- **Clientes**: Si los consumidores prefieren productos responsables, la empresa tiene que adaptarse para satisfacer esa demanda.
+- **Accionistas**: Si los inversores apuestan por empresas sostenibles, las empresas deben adoptar prácticas responsables para atraer inversión.
+- **Reguladores**: Las empresas deben cumplir con las leyes medioambientales y laborales para evitar sanciones.
+- **Sociedad y comunidades**: La presión social por prácticas éticas puede forzar a la empresa a mejorar su responsabilidad social y medioambiental.
