--- a/1.Introduccion_al_análisis_de_sostenibilidad.md
+++ b/1.Introduccion_al_análisis_de_sostenibilidad.md
@@ -2,6 +2,8 @@
 
 ## ¿Qué es un plan de sostenibilidad y por qué es importante para una empresa?
 
+[Plansost](img/plansost.jpg)
+
 Un **plan de sostenibilidad** es un conjunto de acciones que toma una empresa para ser más responsable con el medio ambiente, la sociedad y la economía. Es importante porque ayuda a reducir costos, atraer clientes conscientes, mejorar la reputación y asegurar la viabilidad a largo plazo. Las empresas que implementan estas estrategias no solo cumplen con normativas, sino que también pueden ser más rentables, ya que aprovechan nuevas oportunidades de mercado y atraen a inversores que prefieren negocios responsables.
 
 ## Relación entre sostenibilidad, rentabilidad y reputación empresarial
