--- a/2.Grupos_de_interes.md
+++ b/2.Grupos_de_interes.md
@@ -2,6 +2,8 @@
 
 ## ¿Cuáles son los principales grupos de interés de una empresa?
 
+[Stakeholders](img/stakeholders.jpg)
+
 Los principales grupos de interés de una empresa son:
 
 1. **Empleados**: Su bienestar es clave para la productividad y para la implementación de políticas sostenibles.
