--- a/2.Grupos_de_interes.md
+++ b/2.Grupos_de_interes.md
@@ -2,7 +2,7 @@
 
 ## ¿Cuáles son los principales grupos de interés de una empresa?
 
-[Stakeholders](img/stakeholders.jpg)
+![Stakeholders](img/stakeholders.jpg)
 
 Los principales grupos de interés de una empresa son:
 
